syntax = "proto3";
package edges;

option go_package = "github.com/snple/beacon/pb/edges;edges";

import "generic_message.proto";

message SyncUpdated {
    // string id = 1;
    int64 updated = 2;
}

service SyncService {
    rpc SetNodeUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetNodeUpdated(pb.MyEmpty) returns (SyncUpdated) {}
    rpc WaitNodeUpdated(pb.MyEmpty) returns (stream pb.MyBool) {}

    rpc SetWireUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetWireUpdated(pb.MyEmpty) returns (SyncUpdated) {}

    rpc SetPinUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinUpdated(pb.MyEmpty) returns (SyncUpdated) {}

    rpc SetConstUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetConstUpdated(pb.MyEmpty) returns (SyncUpdated) {}

    rpc SetPinValueUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinValueUpdated(pb.MyEmpty) returns (SyncUpdated) {}
    rpc WaitPinValueUpdated(pb.MyEmpty) returns (stream pb.MyBool) {}

    rpc SetPinWriteUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinWriteUpdated(pb.MyEmpty) returns (SyncUpdated) {}
    rpc WaitPinWriteUpdated(pb.MyEmpty) returns (stream pb.MyBool) {}
}
